# TaxSee

./: .env.example  README.md  app.py  docker-compose.yml  fast_processor.py  pyproject.toml  requirements.txt  resources.md  setup_dev.sh
evals/: eval.csv  eval_test.csv  finetuning_taxrag.csv
rag_engine/: __init__.py  config.py  factory.py  interfaces.py  pipeline.py
rag_engine/enhancers/: __init__.py  base.py  cerebras.py  gemini.py
rag_engine/implementations/: __init__.py  chunkers.py  embedders.py  metadata.py  parsers.py  vector_stores.py
rag_engine/prompts/: __init__.py  sql_converter.py  tax_expert.py
rag_engine/tests/: conftest.py  test_chunking.py  test_enhancement.py  test_pipeline.py  test_search.py  test_vector_store.py
rag_engine/utils/: token_counter.py
