[project]
name = "taxsee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "streamlit==1.32.0",
    "pdfplumber==0.10.4",
    "pandas==2.2.1",
    "python-pptx==0.6.23",
    "neo4j==5.17.0",
    "sentence-transformers==2.5.1",
    "python-dotenv==1.0.1",
    "nltk==3.8.1",
    "unstructured==0.12.5",
    "pypdf==4.0.1",
    "psutil==5.9.8",
    "langchain>=0.1.10,<0.2",
    "langchain-text-splitters",
    "spacy==3.8.4",
    "faiss-cpu",
    "pdf2image",
    "pillow-heif",
    "opencv-python",
    "timm",
    "openai",
    "google-generativeai>=0.8.4",
]
